# Induction-Aryan-Tripathi

coordinate_bot/action/install/: setup.bash  setup.zsh
coordinate_bot/action/log/: latest_build
coordinate_bot/scripts/: goal_follower_server.py  odom_tester.py
coordinate_follower/: CMakeLists.txt  package.xml
coordinate_follower/action/: GoToCoordinate.action
coordinate_follower/action/install/: local_setup.sh  setup.ps1  setup.sh
coordinate_follower/scripts/: coordinates.txt  goal_sender_client.py
obstacle_avoider/: CMakeLists.txt  package.xml
obstacle_avoider/scripts/: avoid_obstacle.py
turtle_controller/: package.xml  setup.py
turtle_controller/turtle_controller/: turtle_controller_node.py
